# AssetVault

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/alembic/: env.py
backend/alembic/versions/: a491c78d3e12_add_format_aware_asset_extraction.py  d83fa2b7c104_add_persistent_task_queue_fields.py  efe024a2094e_create_postgres_schema_with_pgvector.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  asset.py  asset_embedding.py  folder.py  project.py  setting.py  tag.py  task.py  user.py
backend/app/schemas/: ai.py  asset.py  auth.py  folder.py  project.py  search.py  setting.py  stats.py  tag.py  task.py  user.py
backend/app/services/: ai_analysis_service.py  asset_extractor.py  asset_scanner.py  backup_service.py  duplicate_service.py  embedding_service.py  file_type_service.py  hash_service.py  missing_asset_service.py  schema_service.py  search_service.py  settings_service.py  task_queue.py  (+1 more)
backend/tests/: test_api.py  test_asset_extractor.py
docker/postgres/: init.sql
docs/: api-design.md  completion-audit.md  demo-assets.md  deployment.md  development-plan.md  interview-guide.md  optimization-plan.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/components/: AppShell.tsx
frontend/lib/: api.ts
scripts/: clear_library_data.py  create_demo_assets.py  migrate_sqlite_to_postgres.py
(+24 files in other folders)
