[project]
name = "assetvault"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16",
    "email-validator>=2.2.0",
    "fastapi>=0.116.0",
    "pgvector>=0.4",
    "pillow>=11.0.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.10.0",
    "pyjwt>=2.10.0",
    "sentence-transformers>=5.0",
    "sqlalchemy>=2.0.0",
    "torch>=2.13.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
